update 2 alan jasso

--- a/notebooks/Fase-1/fase-1.ipynb
+++ b/notebooks/Fase-1/fase-1.ipynb
@@ -514,9 +514,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Transformaciones que se aplicarán a las variables numéricas usando la clase Pipeline de sklearn:\n",
-    "\n",
-    "# ************* Inlcuye aquí tu código:*****************************\n",
     "\n",
     "# Variables numéricas:\n",
     "num_pipe = Pipeline(steps=[(\"scale\", StandardScaler()),(\"transf\", FunctionTransformer())])\n",
@@ -534,9 +531,7 @@
     "# deja inaletardas aquellas que hayas decidido no transformar:\n",
     "\n",
     "columnasTransformer = ColumnTransformer([(\"scale_transform\", num_pipe, num_pipe_nombres), (\"ordin\", cat_ord_pipe , cat_ord_nombres),\n",
-    "(\"ohe\", cat_nom_pipe , cat_ord_nombres),], remainder=\"passthrough\")\n",
-    "\n",
-    "# *********** Aquí termina la sección de agregar código *************"
+    "(\"ohe\", cat_nom_pipe , cat_ord_nombres),], remainder=\"passthrough\")\n"
    ]
   },
   {
@@ -569,7 +564,6 @@
    "source": [
     "data_numeric = data.select_dtypes(include=[np.number])\n",
     "\n",
-    "# Estandarizar los datos (media=0, desviación estándar=1)\n",
     "scaler = StandardScaler()\n",
     "data_scaled = scaler.fit_transform(data_numeric)"
    ]
@@ -591,12 +585,11 @@
    "source": [
     "pca = PCA(n_components=2)\n",
     "\n",
-    "# Ajustar PCA a los datos escalados\n",
     "data_pca = pca.fit_transform(data_scaled)\n",
-    "# Porcentaje de varianza explicada por cada componente principal\n",
+    "\n",
     "print(pca.explained_variance_ratio_)\n",
     "\n",
-    "# Varianza acumulada\n",
+    "\n",
     "print(np.cumsum(pca.explained_variance_ratio_))"
    ]
   },
@@ -619,7 +612,6 @@
    "source": [
     "data_pca_2D = pd.DataFrame(data_pca, columns=['PCA1', 'PCA2'])\n",
     "\n",
-    "# Gráfico de dispersión de los dos componentes principales\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.scatterplot(x='PCA1', y='PCA2', data=data_pca_2D)\n",
     "plt.title('PCA - Reducción a 2 dimensiones')\n",
