--- a/notebooks/Fase-1/fase-1.ipynb
+++ b/notebooks/Fase-1/fase-1.ipynb
@@ -525,13 +525,7 @@
     "\n",
     "\n",
     "cat_nom_pipe = Pipeline(steps=[(\"dummies\", OneHotEncoder())])\n",
-    "cat_nom_nombres = var_nom\n",
-    "\n",
-    "# Conjuntemos las transformaciones de todo tipo de variable y en dado caso\n",
-    "# deja inaletardas aquellas que hayas decidido no transformar:\n",
-    "\n",
-    "columnasTransformer = ColumnTransformer([(\"scale_transform\", num_pipe, num_pipe_nombres), (\"ordin\", cat_ord_pipe , cat_ord_nombres),\n",
-    "(\"ohe\", cat_nom_pipe , cat_ord_nombres),], remainder=\"passthrough\")\n"
+    "cat_nom_nombres = var_nom"
    ]
   },
   {
