--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'base': {'seed': 42}, 'data_load': {'filepath': './data/raw/SouthGermanCredit.asc', 'dataset_csv': './data/Preprocess.csv', 'processed': 'data/processed/'}, 'data_split': {'test_size': 0.2, 'X_train_set_path': './data/X_test_SouthGermanCredit.csv', 'Y_test_set_path': './data/Y_test_SouthGermanCredit.csv'}, 'train': {'cv': 3, 'estimator_name': 'logreg', 'C': 0.001, 'max_iter': 100, 'multi_class': 'multinomial', 'model_path': 'models/model.joblib', 'models': 'models/'}, 'reports': None}\n"
+      "{'base': {'seed': 42}, 'data_load': {'filepath': './data/raw/SouthGermanCredit.asc', 'dataset_csv': './data/Preprocess.csv', 'processed': 'data/processed/'}, 'data_split': {'test_size': 0.2, 'random_state': 42, 'X_train_set_path': './data/X_train_SouthGermanCredit.csv', 'X_test_set_path': './data/X_test_SouthGermanCredit.csv', 'Y_train_set_path': './data/Y_train_SouthGermanCredit.csv', 'Y_test_set_path': './data/Y_test_SouthGermanCredit.csv'}, 'train': {'cv': 3, 'estimator_name': 'logreg', 'C': 0.001, 'max_iter': 100, 'multi_class': 'multinomial', 'model_path': 'models/model.joblib', 'models': 'models/'}, 'reports': None}\n"
      ]
     }
    ],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,16 +76,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+    "test_size=config['data_split']['test_size']\n",
+    "random_state=config['data_split']['random_state']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=test_size, random_state=random_state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./data/X_train_SouthGermanCredit.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(config['data_split']['X_train_set_path'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -97,16 +124,31 @@
     }
    ],
    "source": [
-    "print(config['data_split']['X_train_set_path'])"
+    "print(config['data_split']['X_test_set_path'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train.to_csv('./data/X_train_SouthGermanCredit.csv')"
+    "X_train.to_csv('./data/X_train_SouthGermanCredit.csv')\n",
+    "X_test.to_csv('./data/X_test_SouthGermanCredit.csv')\n",
+    "y_train.to_csv('./data/Y_train_SouthGermanCredit.csv')\n",
+    "y_test.to_csv('./data/Y_test_SouthGermanCredit.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train.to_csv(config['data_split']['X_train_set_path'])\n",
+    "X_test.to_csv(config['data_split']['X_test_set_path'])\n",
+    "y_train.to_csv(config['data_split']['Y_train_set_path'])\n",
+    "y_test.to_csv(config['data_split']['Y_test_set_path'])"
    ]
   }
  ],
