--- a/notebooks/fase-1_Part03_v3.ipynb
+++ b/notebooks/fase-1_Part03_v3.ipynb
@@ -1024,7 +1024,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "vENV-IA-Advance",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -1038,7 +1038,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
