--- a/notebooks/Fase-1/fase-1_Part03_v3.ipynb
+++ b/notebooks/Fase-1/fase-1_Part03_v3.ipynb
@@ -625,10 +625,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Definir el rango de valores para los hiperparámetros a explorar\n",
-    "param_grid = {'C': [0.1, 1, 10],\n",
-    "              'kernel': ['linear', 'rbf', 'sigmoid'],\n",
-    "              'gamma': [0.1, 1, 10]}"
+    "# # Definir el rango de valores para los hiperparámetros a explorar\n",
+    "# param_grid = {'C': [0.1, 1, 10],\n",
+    "#               'kernel': ['linear', 'rbf', 'sigmoid'],\n",
+    "#               'gamma': [0.1, 1, 10]}"
    ]
   },
   {
@@ -962,7 +962,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "MLOpsEnv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -976,7 +976,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
