--- a/notebooks/Fase-1/fase-1_Part04_v1.ipynb
+++ b/notebooks/Fase-1/fase-1_Part04_v1.ipynb
@@ -648,7 +648,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dvc-venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
