--- a/test.ipynb
+++ b/test.ipynb
@@ -73,6 +73,43 @@
     "X=df.drop(['credit_risk'],axis=1)\n",
     "y=df['credit_risk']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Load Complete\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.stages.data_load import data_load\n",
+    "\n",
+    "data_load(config_path = \"params.yaml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "params.yaml\n",
+      "Data Load Complete\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python .\\src\\stages\\data_load.py --config=params.yaml"
+   ]
   }
  ],
  "metadata": {
